test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/nested.build
defaults(
	example.echo
	Input: defaults(
		example.echo
		Input: abc
	)
)
